# i2c_device

./: CMakeLists.txt  CMakeSettings.json  vcpkg.json
cmake/: CompilerWarnings.cmake  I2CDeviceConfig.cmake.in  i2c-device-config.cmake.in
i2c-device/: CMakeLists.txt
i2c-device/include/i2c-device/: bit.hpp  device.hpp  exception.hpp
i2c-device/include/i2c-device/detail/: i2c-device_export.h
i2c-device/include/i2c-device/driver/: Linux.hpp  Windows.hpp
i2c-device/src/: exception.cpp
i2c_device/: CMakeLists.txt
i2c_device/include/i2c/: bit.hpp  concept.hpp  device.hpp  exception.hpp
i2c_device/include/i2c/driver/: Linux.hpp  Windows.hpp
i2c_device/include/i2c_device/: bit.hpp  device.hpp  util.hpp
i2c_device/include/i2c_device/driver/: Linux.hpp  Windows.hpp
i2c_device/src/: exception.cpp
vcpkg-port/i2c-device/: portfile.cmake
